# wanime-msquic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  commit.sh  fix.py  fix.sh  justfile
src/core/: ack_tracker.c  api.c  bbr.c  binding.c  configuration.c  congestion_control.c  connection.c  connection.h  connection_pool.c  crypto.c  crypto_tls.c  cubic.c  datagram.c  frame.c  frame.h  injection.c  library.c  listener.c  lookup.c  loss_detection.c  mtu_discovery.c  operation.c  operation.h  packet.c  packet.h  packet_builder.c  packet_space.c  partition.c  path.c  precomp.h  range.c  reason.h  recv_buffer.c  registration.c  send.c  send_buffer.c  sent_packet_metadata.c  sent_packet_metadata.h  settings.c  stream.c  (+7 more)
src/inc/: msquic_posix.h  msquichelper.h  quic_driver_helpers.h
src/platform/: CMakeLists.txt  cert_capi.c  certificates_capi.c  certificates_darwin.c  certificates_posix.c  crypt.c  crypt_bcrypt.c  crypt_openssl.c  datapath_epoll.c  datapath_iouring.c  datapath_kqueue.c  datapath_linux.c  datapath_raw.c  datapath_raw_linux.c  datapath_raw_socket.c  datapath_raw_socket_linux.c  datapath_raw_socket_win.c  datapath_raw_win.c  datapath_raw_xdp_linux.c  datapath_raw_xdp_win.c  datapath_unix.c  datapath_win.c  datapath_winkernel.c  datapath_winuser.c  datapath_xplat.c  hashtable.c  pcp.c  platform_internal.h  platform_posix.c  platform_winkernel.c  platform_winuser.c  platform_worker.c  selfsign_capi.c  selfsign_openssl.c  storage_posix.c  storage_winkernel.c  storage_winuser.c  tls_openssl.c  tls_quictls.c  tls_schannel.c  (+1 more)
